Fix accessibilité : problème de contraste

--- a/src/style.css
+++ b/src/style.css
@@ -89,6 +89,7 @@ p {
 }
 
 .container {
+  background-color: black;
   display: flex;
   flex-direction: column;
   width: 400px;
